--- a/estilo/style.css
+++ b/estilo/style.css
@@ -1,92 +1,65 @@
 @charset "UTF-8";
 
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Kaushan+Script&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,500;1,800&display=swap');
-
-:root {
-  --cor0:#ffe4b4;
-  --cor1:#83e1ad;
-  --cor2:#3ddc84;
-  --cor3: #2fa866;
-  --cor4: #1a5c37;
-  --cor5: #063d1e;
-  
-  --fonte-padrão: Arial, Verdana, Helvetica, Sans-Serif;
-  --fonte-destaque: 'Bebas Neue', cursive;
-  --fonte-android: 'Android', cursive;
-}
-
 * {
     margin: 0px;
     padding: 0px;
 }
-
-
-
 body {
-    background-color:rgb(95, 87, 87);
-    font-family: var(--fonte-padrão);
-
+    background-color:rgb(63, 59, 59);
 }
 
 header {
- background-image: rgb(221, 209, 209);
- min-height: 150px;
+ background-image: rgb(230, 216, 216);
  text-align: left;
  padding-top: 40px;
+ display:flex;
 }
 
 
 header > h1 {
     color:white;
     font-family: 'Times New Roman', Times, serif;
-    font-size: 3em;
+    font-size: 2em;
     font-weight:normal;
-    margin-top: 30px;
     margin-bottom: 20px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0,267);
-    text-align: center;
+    padding-left: 70px;
 }
 
 header > p {
     font-family: 'Times New Roman', Times, serif;
     font-size: 1.2em;
-    padding-bottom: 30px;
     color: white;
     max-width: 600px;
     padding-right: 10px;
     padding-left: 10px;
     margin: auto;
-    padding-bottom: 30px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0,315);
 
 }
 
 nav {
-    background-color: gray;
-    padding: 10px;
-    text-shadow: 0px 7px 7px rgba(0, 0, 0, 0.192);
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  padding-top: 10px;
 }
 
 nav > a {
-  color:white;
+  color: white;
   padding: 10px;
   text-decoration: none;
   border-radius: 5px;
   font-weight: bold;
   transition-duration: 0.5s;
 }
-
-nav > a:hover {
- background-color:white;
- color: gray;
-}
-
 .search-box {
     position: absolute;
     top: 50%;
     left: 50%;
    transform: translate(-50%, -50%);
-   background: rgba(80, 74, 74, 0.534);
+   background: rgba(163, 135, 135, 0.534);
    height: 20px;
    padding: 10px;
    border-radius: 40px;
@@ -124,12 +97,23 @@ nav > a:hover {
     width: 220px;
     padding: 0.6px;
   }
-  
 
+  .criarconta {
+    height: 35px;
+    padding-right: 5px;
+    font-weight: bold;
+  }
 
+  .entrar {
+    height: 35px;
+    padding-left: 5px;
+    padding-right: 10px;
+    background-color: rgba(248, 242, 242, 0.37);
+    color: white;
+  }
 
 footer {
-    background-color: rgb(61, 55, 55);
+    background-color: rgb(173, 158, 158);
     color: white;
     text-align: center;
     font-size: 0.8;
