--- a/estilo/style.css
+++ b/estilo/style.css
@@ -6,25 +6,35 @@
     padding: 0px;
 }
 body {
-    background-color:rgb(63, 59, 59);
+    background-color:#282D2D;
 }
 
-header {
- background-image: rgb(230, 216, 216);
- text-align: left;
- padding-top: 40px;
- display:flex;
+.pai{
+  display: flex;
+  justify-content: space-between;
+  padding-top: 25px;
+  padding-bottom: 15px;
+  width: auto;
 }
 
+.coluna2{
+  font-family: 'Roboto';
+  text-transform: uppercase;
+  font-size: 13px;
+}
 
-header > h1 {
+h1 {
     color:white;
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 2em;
+    font-family: 'Rancho';
+    font-size: 40px;
     font-weight:normal;
-    margin-bottom: 20px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0,267);
+    margin-top: -5px;
     padding-left: 70px;
+}
+
+.coluna3{
+  padding-right: 70px;
 }
 
 header > p {
@@ -99,17 +109,26 @@ nav > a {
   }
 
   .criarconta {
-    height: 35px;
-    padding-right: 5px;
+    height: 30px;
+    padding-right: 10px;
+    padding-left: 10px;
     font-weight: bold;
+    background-color: white;
+    color: #282D2D;
+    border: 2px solid white; /* Green */
+    border-radius: 6px;
   }
 
   .entrar {
-    height: 35px;
-    padding-left: 5px;
+    height: 30px;
     padding-right: 10px;
-    background-color: rgba(248, 242, 242, 0.37);
+    padding-left: 10px;
+    font-weight: bold;
+    background-color: #282D2D;;
     color: white;
+    border: 2px solid white; /* Green */
+    border-radius: 6px;
+    margin-left: 15px;
   }
 
   .filmes-carrousel {
@@ -141,5 +160,164 @@ footer a:hover {
 
 }
 
+.carouselOfImages
+{
+  background-image: linear-gradient(to bottom,  #222424, #282D2D, #222424);;
+  width: auto;
+  margin:auto;
+  padding-left: 100px;
+  padding-right: 100px;
+  overflow:visible;
+}
+.carouselImage {
+  width: 200px;
+  height: 200px;
+  margin-top:65px;
+  margin-bottom:100px;
+  border-radius: 5px;
+  counter-increment: carousel-cell;
+  transition: transform 0.5s;
+  transform: scale(1);
+}
+.carouselImage img {
+  height:235px;
+}
+.carouselImage.is-selected {
+  z-index:10;
+  transform: scale(1.5);
+}
+.carouselImage.nextToSelected {
+  transform: scale(1.25);
+  z-index:5;
+}
+
+/*! Flickity v2.0.5
+https://flickity.metafizzy.co
+---------------------------------------------- */
+
+.flickity-enabled {
+  position: relative;
+}
+
+.flickity-enabled:focus { outline: none; }
+
+.flickity-viewport {
+  overflow: hidden;
+  position: relative;
+  height: 100%;
+}
+
+.flickity-slider {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+/* draggable */
+
+.flickity-enabled.is-draggable {
+  -webkit-tap-highlight-color: transparent;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.flickity-enabled.is-draggable .flickity-viewport {
+  cursor: move;
+  cursor: -webkit-grab;
+  cursor: grab;
+}
+
+.flickity-enabled.is-draggable .flickity-viewport.is-pointer-down {
+  cursor: -webkit-grabbing;
+  cursor: grabbing;
+}
+
+/* ---- previous/next buttons ---- */
+
+.flickity-prev-next-button {
+  position: absolute;
+  top: 50%;
+  width: 44px;
+  height: 44px;
+  border: none;
+  border-radius: 50%;
+  background: white;
+  background: hsla(0, 0%, 100%, 0.75);
+  cursor: pointer;
+  /* vertically center */
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.flickity-prev-next-button:hover { background: white; }
+
+.flickity-prev-next-button:focus {
+  outline: none;
+  box-shadow: 0 0 0 5px #09F;
+}
+
+.flickity-prev-next-button:active {
+  opacity: 0.6;
+}
+
+.flickity-prev-next-button.previous { left: 10px; }
+.flickity-prev-next-button.next { right: 10px; }
+/* right to left */
+.flickity-rtl .flickity-prev-next-button.previous {
+  left: auto;
+  right: 10px;
+}
+.flickity-rtl .flickity-prev-next-button.next {
+  right: auto;
+  left: 10px;
+}
+
+.flickity-prev-next-button:disabled {
+  opacity: 0.3;
+  cursor: auto;
+}
+
+.flickity-prev-next-button svg {
+  position: absolute;
+  left: 20%;
+  top: 20%;
+  width: 60%;
+  height: 60%;
+}
+
+.flickity-prev-next-button .arrow {
+  fill: #333;
+}
+
+.flickity-page-dots {
+
+  width: 100%;
+  bottom: -25px;
+  margin: 0;
+  padding-bottom: 10px;
+  list-style: none;
+  text-align: center;
+  line-height: 1;
+}
+
+.flickity-rtl .flickity-page-dots { direction: rtl; }
+
+.flickity-page-dots .dot {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  margin: 0 8px;
+  background: rgb(255, 255, 255);
+  border-radius: 50%;
+  opacity: 0.25;
+  cursor: pointer;
+}
+
+.flickity-page-dots .dot.is-selected {
+  opacity: 1;
+  background: #D84444;
+}
 
 
