--- a/style2.css
+++ b/style2.css
@@ -26,47 +26,75 @@ h1 {
     font-size: 4em;
     text-align: center;
 }
+.container{
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
 .teladelogin {
-    position: absolute;
-    width: 577px;
-    height: 500px;
+    width: 600px;
     left: 431px;
     top: 286px;
     background: white;
     border-radius: 10px;
     text-align: center;
+    padding: 10%;
 }
-h2 {
-    position: absolute;
-    width: 200px;
-    height: 100px;
-    right: 200px;
-     color: #282D2D;
-     text-align: center;
-     top: 30px;
-     font-family: 'Roboto';
-     font-style: normal;
-     padding-left: 5px;
+
+h2{
+    text-align: center;
+    justify-content: center;
+    color: #282D2D;
+    text-align: center;
+    font-family: 'Roboto';
+    font-style: normal;
+}
+
+
+.frase {
+    padding-bottom: 60px;
+}
+.frase2 {
+    padding-bottom: 100px;
+}
+.title-btn {
+    font-size: 16px;
+}
+
+.ico-btn {
+    margin-right: 10%;
+}
+
+.btnG {
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    text-align: center;
 }
 
 h3 {
-    position: absolute;
-    width: 30px;
-    height: 20px;
-    left: 70px;
+    text-align: center;
     color: #757575;
 }
 #text1 {
 border-radius: 5px;
 height: 40px;
 }
-.google {
- height: 40px;
- border-radius: 5px;
- 
+
+.btn {
+    border-radius: 5px;
+    height: 40px;
+    width: 309px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    padding: 20px;
 }
+
 .cadastrado {
    bottom: 100px;
 }
-
-
